WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
153053
[Cocoa] Font features are not applied to the system font
https://bugs.webkit.org/show_bug.cgi?id=153053
Summary
[Cocoa] Font features are not applied to the system font
Myles C. Maxfield
Reported
2016-01-12 19:32:32 PST
[Cocoa] Font features are not applied to the system font
Attachments
Patch
(4.08 KB, patch)
2016-01-12 19:33 PST
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch
(3.98 KB, patch)
2016-01-12 19:42 PST
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2016-01-12 19:33:18 PST
Created
attachment 268846
[details]
Patch
Myles C. Maxfield
Comment 2
2016-01-12 19:42:18 PST
Created
attachment 268849
[details]
Patch
Jon Lee
Comment 3
2016-01-13 11:54:19 PST
Comment on
attachment 268849
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=268849&action=review
> LayoutTests/fast/text/system-font-features-expected.html:7 > +<div style="font: 50px -apple-system-monospaced-numbers;">0123456789</div>
Eventually we're going to want to remove this style. Is there another way we could write this test?
Jon Lee
Comment 4
2016-01-13 12:11:20 PST
<
rdar://problem/24173613
>
Myles C. Maxfield
Comment 5
2016-01-13 17:21:16 PST
Comment on
attachment 268849
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=268849&action=review
>> LayoutTests/fast/text/system-font-features-expected.html:7 >> +<div style="font: 50px -apple-system-monospaced-numbers;">0123456789</div> > > Eventually we're going to want to remove this style. Is there another way we could write this test?
I tried, but unfortunately it looks like I can't use -mismatch-expected results because of the system font mocking we are doing for testing. :(
WebKit Commit Bot
Comment 6
2016-01-15 14:58:59 PST
Comment on
attachment 268849
[details]
Patch Clearing flags on attachment: 268849 Committed
r195150
: <
http://trac.webkit.org/changeset/195150
>
WebKit Commit Bot
Comment 7
2016-01-15 14:59:02 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug