[Cocoa] Font features are not applied to the system font https://bugs.webkit.org/show_bug.cgi?id=153053

Reviewed by Dean Jackson.

Source/WebCore:

We simply need to call preparePlatformFont() on it.

Test: fast/text/system-font-features.html

* platform/graphics/cocoa/FontCacheCoreText.cpp:
(WebCore::fontWithFamily):

LayoutTests:

* fast/text/system-font-features-expected.html: Added.
* fast/text/system-font-features.html: Added.


Canonical link: https://commits.webkit.org/171234@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@195150 268f45cc-cd09-0410-ab3c-d52691b4dbfc